# api-example

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend.yml  frontend.yml
backend/src/fern_fastapi_starter/: movies_service.py  server.py
backend/src/fern_fastapi_starter/blueprints/movies/: __init__.py  movie_api.py
backend/src/fern_fastapi_starter/blueprints/movies/controllers/: __init__.py  movie_controller.py
fern/: fern.config.json
fern/api/: generators.yml
fern/api/definition/: imdb.yml  movie.yml  openapi.yml
frontend/: .gitignore  .pnp.cjs  package.json
frontend/src/: App.tsx  index.css
frontend/src/services/: movie.ts
openapi/: openapi.yml
