[tool.poetry]
name = "api-example"
version = "0.1.0"
description = ""
authors = ["Michael Nazario <mnazario@coastpay.com>"]
readme = "README.md"
packages = [{include = "api_example"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
